syntax = "proto3";
package proxy;
option go_package = "github.com/he-man-david/distributed-rate-limiter-basic/src/server/proxy";

message RegisterNodeReq {
  int64 rate_limiter_id = 1;
  int64 port = 2;
}

message RegisterNodeResp {
  bool res = 1;
}

message AllowRequestReq {
  int64 api_key = 1;
}

message AllowRequestResp {
  bool res = 1;
}

service Proxy {
  rpc RegisterNode(RegisterNodeReq) returns (RegisterNodeResp) {};
  rpc AllowRequest(AllowRequestReq) returns (AllowRequestResp) {};
}
